--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.1"
   }
 }
